bug fixed (image not showing)

--- a/src/components/project/Project.css
+++ b/src/components/project/Project.css
@@ -48,6 +48,7 @@
   object-fit: cover;
   border-radius: 20px;
   z-index: 1;
+  overflow: hidden;
 }
 .item:hover {
   background-color: var(--backgroundcolor);
